Add Bitpanda pages

--- a/de/legal-notice/index.html
+++ b/de/legal-notice/index.html
@@ -155,7 +155,7 @@
 <section aria-labelledby="affiliation">
 <h2 id="affiliation">6) Partnerschaften und Partnerschaften</h2>
 <p>
-        Einige Links sind <strong>anbieter-links</strong>. Wenn Sie ein Konto eröffnen oder über diese Links eine förderungswürdige Aktion ergreifen, können wir eine Provision erhalten. Dies beeinträchtigt nicht den Preis, den Sie zahlen und stellt keine personalisierte Beratung oder eine Empfehlung dar.
+        Einige Links sind <strong>Affiliate-Links</strong> (z. B. zu eToro oder Bitpanda). Wenn Sie ein Konto eröffnen oder über diese Links eine förderungswürdige Aktion ergreifen, können wir eine Provision erhalten. Dies beeinträchtigt nicht den Preis, den Sie zahlen und stellt keine personalisierte Beratung oder eine Empfehlung dar.
       </p>
 <p>
 <strong>Finanzrisikowarnungen:</strong> Asset-Werte können sowohl nach unten als auch nach oben gehen; Sie können einige oder alle Ihre Kapital verlieren. <strong>CFDs</strong> sind komplexe Instrumente und tragen ein hohes Risiko, Geld aufgrund der Hebelwirkung schnell zu verlieren: <strong>61% der Einzelhandelsinvestorkonten verlieren Geld</strong> mit diesem Anbieter.
