--- a/en/legal-notice/index.html
+++ b/en/legal-notice/index.html
@@ -156,7 +156,7 @@
 <section aria-labelledby="affiliation">
 <h2 id="affiliation">6) Partnerships &amp; affiliation</h2>
 <p>
-        Some links are <strong>affiliate links</strong>. If you open an account or take an eligible action through those links, we may receive a commission. This does not affect the price you pay and does not constitute personalized advice or a recommendation.
+        Some links are <strong>affiliate links</strong> (for example to eToro or Bitpanda). If you open an account or take an eligible action through those links, we may receive a commission. This does not affect the price you pay and does not constitute personalized advice or a recommendation.
       </p>
 <p>
 <strong>Financial risk warnings:</strong> asset values can go down as well as up; you may lose some or all of your capital. <strong>CFDs</strong> are complex instruments and carry a high risk of losing money rapidly due to leverage: <strong>61% of retail investor accounts lose money</strong> with this provider.
