--- a/en/privacy-policy/index.html
+++ b/en/privacy-policy/index.html
@@ -144,7 +144,7 @@
 <p><strong>E-Com Shop (SASU)</strong>, SIREN <strong>934 934 308</strong>, publishes the website <strong>avis-invest.com</strong> ("the Site").<br/>
 <strong>Address:</strong> 60 rue François 1<sup>er</sup>, 75008 Paris, France — <strong>Contact/DPO:</strong> <a href="mailto:contact.ecomshopfrance@gmail.com">contact.ecomshopfrance@gmail.com</a>.<br/>
 <strong>Hosting:</strong> Netlify, Inc., 512 2nd Street, Suite 200, San Francisco, CA 94107, USA.</p>
-<p class="small note">We do not provide investment advice. The Site contains affiliate links to eToro.</p>
+<p class="small note">We do not provide investment advice. The Site may contain affiliate links (e.g., eToro, Bitpanda).</p>
 </section>
 <section aria-labelledby="data">
 <h2 id="data">2) Data we process</h2>
@@ -153,7 +153,7 @@
 <li><strong>Browsing data</strong>: language/cookie preferences, referrers, session duration.</li>
 <li><strong>External content</strong>: loaded after consent (e.g., YouTube player, GA4 scripts).</li>
 </ul>
-<p class="small">We do not collect identity documents or financial data. Sign-up/eKYC and trading occur exclusively on eToro's sites/apps, outside our scope.</p>
+<p class="small">We do not collect identity documents or financial data. Sign-up/eKYC and trading occur on partners’ sites/apps (e.g., eToro, Bitpanda), outside our scope.</p>
 </section>
 <section aria-labelledby="purposes">
 <h2 id="purposes">3) Purposes &amp; legal bases</h2>
@@ -181,7 +181,7 @@
 </tr>
 <tr>
 <td>Affiliation</td>
-<td>Redirect to eToro via sponsored link</td>
+<td>Redirect to partners via sponsored link (e.g., eToro, Bitpanda)</td>
 <td>Legitimate interest (monetization) + advertising transparency rules</td>
 <td>Minimal technical duration (we do not set third-party affiliate cookies)</td>
 </tr>
@@ -206,7 +206,7 @@
 <li><strong>Google (GA4)</strong> — audience measurement, only if you consent.</li>
 <li><strong>YouTube/Google</strong> — embedded video playback, only if you consent.</li>
 </ul>
-<p class="small">We do not sell your data. Data collected via our Site is not shared with eToro. When you click an eToro link, you leave our Site; eToro's processing is subject to its own policies.</p>
+<p class="small">We do not sell your data. Data collected via our Site is not shared with our partners. When you click a link to eToro or Bitpanda, you leave our Site; the partner’s processing is subject to its own policies.</p>
 </section>
 <section aria-labelledby="transfers">
 <h2 id="transfers">6) International data transfers</h2>
