--- a/es/legal-notice/index.html
+++ b/es/legal-notice/index.html
@@ -155,7 +155,7 @@
 <section aria-labelledby="affiliation">
 <h2 id="affiliation">6) Asociación &amp; afiliación</h2>
 <p>
-        Algunos enlaces son <strong>enlaces de afiliados</strong>. Si usted abre una cuenta o toma una acción elegible a través de esos enlaces, podemos recibir una comisión. Esto no afecta el precio que usted paga y no constituye asesoramiento personalizado o una recomendación.
+        Algunos enlaces son <strong>enlaces de afiliados</strong> (por ejemplo hacia eToro o Bitpanda). Si usted abre una cuenta o toma una acción elegible a través de esos enlaces, podemos recibir una comisión. Esto no afecta el precio que usted paga y no constituye asesoramiento personalizado o una recomendación.
       </p>
 <p>
 <strong>Avisos de riesgo financiero:</strong> los valores de activos pueden bajar así como hacia arriba; usted puede perder algunos o todo su capital. <strong>CFD</strong> son instrumentos complejos y tienen un alto riesgo de perder dinero rápidamente debido al apalancamiento: <strong>61% de las cuentas de inversores minoristas pierden dinero</strong> con este proveedor.
