--- a/es/privacy-policy/index.html
+++ b/es/privacy-policy/index.html
@@ -143,7 +143,7 @@
 <p><strong>E-Com Shop (SASU)</strong>, SIREN <strong>934 934 308</strong>, publica el sitio web <strong>avis-invest.com</strong> ("el Sitio").<br/>
 <strong>Dirección:</strong> 60 rue François 1<sup>er.</sup>, 75008 París, Francia <strong>Contacto/DPO:</strong> <a href="mailto:contact.ecomshopfrance@gmail.com">contact.ecomshopfrance@gmail.com</a>.<br/>
 <strong>Hosting:</strong> Netlify, Inc., 512 2nd Street, Suite 200, San Francisco, CA 94107, USA.</p>
-<p class="small note">No proporcionamos consejos de inversión. El Sitio contiene enlaces de afiliados a eToro.</p>
+<p class="small note">No proporcionamos consejos de inversión. El Sitio puede contener enlaces de afiliados (p. ej., eToro, Bitpanda).</p>
 </section>
 <section aria-labelledby="data">
 <h2 id="data">2) Datos que procesamos</h2>
@@ -152,7 +152,7 @@
 <li><strong>Browsing data</strong>: preferencias de idioma/novato, árbitros, sesión de duración.</li>
 <li><strong>Contenido externo</strong>: cargado después del consentimiento (por ejemplo, reproductor de YouTube, scripts GA4).</li>
 </ul>
-<p class="small">No recopilamos documentos de identidad ni datos financieros. El registro/eKYC y el comercio ocurren exclusivamente en los sitios/aplicaciones de eToro, fuera de nuestro alcance.</p>
+<p class="small">No recopilamos documentos de identidad ni datos financieros. El registro/eKYC y el comercio ocurren en los sitios/aplicaciones de los socios (p. ej., eToro, Bitpanda), fuera de nuestro alcance.</p>
 </section>
 <section aria-labelledby="purposes">
 <h2 id="purposes">3) Objetivos &amp; bases jurídicas &amp;</h2>
@@ -180,7 +180,7 @@
 </tr>
 <tr>
 <td>Afiliación</td>
-<td>Redirección de eToro a través de enlaces patrocinados</td>
+<td>Redirección hacia socios a través de un enlace patrocinado (p. ej., eToro, Bitpanda)</td>
 <td>Interés legítimo (monetización) + reglas de transparencia publicitaria</td>
 <td>Duración técnica mínima (no establecemos cookies de afiliación de terceros)</td>
 </tr>
@@ -205,7 +205,7 @@
 <li><strong>Google (GA4)</strong> — medición del público, sólo si usted acepta.</li>
 <li><strong>YouTube/Google</strong> — reproducción de vídeo incrustada, sólo si usted acepta.</li>
 </ul>
-<p class="small">No vendemos sus datos. Los datos recogidos a través de nuestro Sitio no se comparten con eToro. Al hacer clic en un enlace eToro, usted deja nuestro Sitio; el procesamiento de eToro está sujeto a sus propias políticas.</p>
+<p class="small">No vendemos sus datos. Los datos recogidos a través de nuestro Sitio no se comparten con nuestros socios. Al hacer clic en un enlace de eToro o Bitpanda, usted deja nuestro Sitio; el procesamiento del socio está sujeto a sus propias políticas.</p>
 </section>
 <section aria-labelledby="transfers">
 <h2 id="transfers">6) Transferencias internacionales de datos</h2>
