--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -156,7 +156,7 @@
 <section aria-labelledby="affiliation">
 <h2 id="affiliation">6) Partenariats &amp; affiliation</h2>
 <p>
-        Certains liens sont des <strong>liens d'affiliation</strong>. Si vous ouvrez un compte ou réalisez une action éligible via ces liens, nous pouvons percevoir une commission. Cela n'influence pas le prix payé ni ne constitue une recommandation personnalisée.
+        Certains liens sont des <strong>liens d'affiliation</strong> (par exemple vers eToro ou Bitpanda). Si vous ouvrez un compte ou réalisez une action éligible via ces liens, nous pouvons percevoir une commission. Cela n'influence pas le prix payé ni ne constitue une recommandation personnalisée.
       </p>
 <p>
 <strong>Avertissements financiers :</strong> la valeur des investissements peut baisser comme augmenter ; vous pouvez perdre tout ou partie de votre capital. Les <strong>CFD</strong> sont des instruments complexes et comportent un risque élevé de perte rapide d'argent en raison de l'effet de levier : <strong>61 % des comptes d'investisseurs particuliers perdent de l'argent</strong> auprès de ce fournisseur.
