--- a/politiques-de-confidentialite/index.html
+++ b/politiques-de-confidentialite/index.html
@@ -144,7 +144,7 @@
 <p><strong>E-Com Shop (SASU)</strong>, SIREN <strong>934 934 308</strong>, édite le site <strong>avis-invest.com</strong> (ci-après « le Site »).<br/>
 <strong>Adresse :</strong> 60 rue François 1<sup>er</sup>, 75008 Paris, France — <strong>Contact/DPO :</strong> <a href="mailto:contact.ecomshopfrance@gmail.com">contact.ecomshopfrance@gmail.com</a>.<br/>
 <strong>Hébergeur :</strong> Netlify, Inc., 512 2nd Street, Suite 200, San Francisco, CA 94107, USA.</p>
-<p class="small note">Nous ne fournissons pas de conseil en investissement. Le Site contient des liens d'affiliation vers eToro.</p>
+<p class="small note">Nous ne fournissons pas de conseil en investissement. Le Site peut contenir des liens d'affiliation (par ex. eToro, Bitpanda).</p>
 </section>
 <section aria-labelledby="donnees">
 <h2 id="donnees">2) Données que nous traitons</h2>
@@ -153,7 +153,7 @@
 <li><strong>Données de navigation</strong> : préférences (langue, cookies), référents, temps passé.</li>
 <li><strong>Contenus externes</strong> : chargés après consentement (ex. lecteurs YouTube, scripts GA4).</li>
 </ul>
-<p class="small">Nous ne collectons aucun document d'identité ni données financières. Les opérations d'inscription/eKYC et de trading sont réalisées exclusivement sur les sites/applications d'eToro, hors de notre périmètre.</p>
+<p class="small">Nous ne collectons aucun document d'identité ni données financières. Les opérations d'inscription/eKYC et de trading sont réalisées sur les sites/applications des partenaires (par ex. eToro, Bitpanda), hors de notre périmètre.</p>
 </section>
 <section aria-labelledby="finalites">
 <h2 id="finalites">3) Finalités &amp; bases légales</h2>
@@ -181,7 +181,7 @@
 </tr>
 <tr>
 <td>Affiliation</td>
-<td>Redirection vers eToro via lien sponsorisé</td>
+<td>Redirection vers des partenaires via lien sponsorisé (ex. eToro, Bitpanda)</td>
 <td>Intérêt légitime (monétisation) + obligations légales publicitaires</td>
 <td>Durée technique minimale (nous ne déposons pas de cookies d'affiliation tiers)</td>
 </tr>
@@ -206,7 +206,7 @@
 <li><strong>Google (GA4)</strong> — mesure d'audience, uniquement si vous y consentez.</li>
 <li><strong>YouTube/Google</strong> — lecture de vidéos intégrées, uniquement si vous y consentez.</li>
 </ul>
-<p class="small">Nous ne vendons pas vos données. Les données collectées via notre Site ne sont pas communiquées à eToro. Lorsque vous cliquez sur un lien eToro, vous quittez notre Site et les traitements réalisés par eToro sont soumis à ses propres politiques.</p>
+<p class="small">Nous ne vendons pas vos données. Les données collectées via notre Site ne sont pas communiquées aux partenaires d'affiliation. Lorsque vous cliquez sur un lien partenaire, vous quittez notre Site et les traitements réalisés par ce partenaire sont soumis à ses propres politiques.</p>
 </section>
 <section aria-labelledby="transferts">
 <h2 id="transferts">6) Transferts hors UE</h2>
