--- a/de/index.html
+++ b/de/index.html
@@ -88,6 +88,7 @@
 <ul id="nav-menu">
 <li><a href="/de/">Home</a></li>
 <li><a href="/de/blog/">Blog</a></li>
+<li><a href="/de/bitpanda/">Bitpanda</a></li>
 <li><a href="/de/legal-notice/">Rechtliche Hinweise</a></li>
 <li><a href="/de/privacy-policy/">Datenschutz</a></li>
 </ul>
