--- a/de/privacy-policy/index.html
+++ b/de/privacy-policy/index.html
@@ -143,7 +143,7 @@
 <p><strong>E-Com Shop (SASU)</strong>, SIREN <strong>934 934 308</strong>, veröffentlicht die Website <strong>avis-invest.com</strong> ("die Website").<br/>
 <strong>Anschrift:</strong> 60 rue François 1<sup>!</sup>, 75008 Paris, Frankreich — <strong>Kontakt/DPO:</strong> <a href="mailto:contact.ecomshopfrance@gmail.com">contact.ecomshopfrance@gmail.com</a>.<br/>
 <strong>Hosting:</strong> Netlify, Inc., 512 2nd Street, Suite 200, San Francisco, CA 94107, USA.</p>
-<p class="small note">Wir bieten keine Investitionsberatung an. Die Website enthält Affiliate-Links zu eToro.</p>
+<p class="small note">Wir bieten keine Investitionsberatung an. Die Website kann Affiliate-Links enthalten (z. B. eToro, Bitpanda).</p>
 </section>
 <section aria-labelledby="data">
 <h2 id="data">2) Daten wir verarbeiten</h2>
@@ -152,7 +152,7 @@
 <li><strong>Daten durchsuchen</strong>: Sprache/Cookie-Präferenzen, Referenten, Dauersitzung.</li>
 <li><strong>Externer Inhalt</strong>: nach Zustimmung geladen (z.B. YouTube-Player, GA4-Skripte).</li>
 </ul>
-<p class="small">Wir erfassen keine Identitätsdokumente oder Finanzdaten. Sign-up/eKYC und der Handel erfolgen ausschließlich auf eToros Websites/Apps außerhalb unseres Anwendungsbereichs.</p>
+<p class="small">Wir erfassen keine Identitätsdokumente oder Finanzdaten. Sign-up/eKYC und der Handel erfolgen auf den Websites/Apps der Partner (z. B. eToro, Bitpanda), außerhalb unseres Anwendungsbereichs.</p>
 </section>
 <section aria-labelledby="purposes">
 <h2 id="purposes">3) Zweck und Rechtsgrundlagen</h2>
@@ -180,7 +180,7 @@
 </tr>
 <tr>
 <td>Zugehörigkeit</td>
-<td>Weiterleiten zu eToro über gesponserten Link</td>
+<td>Weiterleitung zu Partnern über gesponserten Link (z. B. eToro, Bitpanda)</td>
 <td>Legitimiertes Interesse (Monetarisierung) + Werbetransparenzregeln</td>
 <td>Minimale technische Dauer (wir setzen keine Affiliate-Cookies von Drittanbietern)</td>
 </tr>
@@ -205,7 +205,7 @@
 <li><strong>Google (GA4)</strong> — Publikumsmessung, nur wenn Sie einwilligen.</li>
 <li><strong>YouTube/Google</strong> — eingebettete Videowiedergabe, nur wenn Sie einwilligen.</li>
 </ul>
-<p class="small">Wir verkaufen Ihre Daten nicht. Die über unsere Website erhobenen Daten werden nicht mit eToro geteilt. Wenn Sie einen eToro-Link anklicken, verlassen Sie unsere Website; die Verarbeitung von eToro unterliegt ihren eigenen Richtlinien.</p>
+<p class="small">Wir verkaufen Ihre Daten nicht. Die über unsere Website erhobenen Daten werden nicht mit unseren Partnern geteilt. Wenn Sie einen Link zu eToro oder Bitpanda anklicken, verlassen Sie unsere Website; die Verarbeitung des Partners unterliegt seinen eigenen Richtlinien.</p>
 </section>
 <section aria-labelledby="transfers">
 <h2 id="transfers">6) Internationale Datenübermittlung</h2>
