--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <ul id="nav-menu">
 <li><a href="/">Accueil</a></li>
 <li><a href="/blog/">Blog</a></li>
+<li><a href="/bitpanda/">Bitpanda</a></li>
 <li><a href="/mentions-legales/">Mentions légales</a></li>
 <li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
 </ul>
