Update Bitpanda affiliate link and improve pages

--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -39,7 +39,41 @@
       'security_storage': 'granted'
     });
     window.__GA_MEASUREMENT_ID__ = 'G-GL3T4Y8WHK';
-  </script></head>
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Accueil","item":"https://avis-invest.com/"},
+        {"@type":"ListItem","position":2,"name":"Bitpanda","item":"https://avis-invest.com/bitpanda/"}
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"FAQPage",
+      "mainEntity":[
+        {
+          "@type":"Question",
+          "name":"Est-ce adapté aux débutants ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Oui, l’interface est généralement conçue pour être accessible. Prenez le temps de comprendre les frais et les risques avant d’investir."}
+        },
+        {
+          "@type":"Question",
+          "name":"Dois-je activer le 2FA ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Oui : activez l’authentification à deux facteurs (2FA) dès la création du compte, et évitez de réutiliser vos mots de passe."}
+        },
+        {
+          "@type":"Question",
+          "name":"Les services sont-ils identiques dans tous les pays ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Non. L’offre peut varier selon la réglementation et votre pays de résidence."}
+        }
+      ]
+    }
+  </script>
+</head>
 <body>
 <!-- Bandeau risque sticky (crypto) -->
 <div aria-label="Avertissement sur les risques crypto" class="risk-banner" role="note">
@@ -189,7 +223,7 @@
 <h2>Ouvrir un compte Bitpanda</h2>
 <p>Le bouton ci-dessous est un lien d’affiliation (il peut nous rémunérer sans surcoût pour vous).</p>
 <p><a class="btn cta" data-aff="bitpanda" href="#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Accéder à Bitpanda</a></p>
-<p class="small note">Si le bouton ne fonctionne pas (JavaScript désactivé), copiez-collez l’URL officielle : <code>https://www.bitpanda.com/</code></p>
+<p class="small note">Si le bouton ne fonctionne pas (JavaScript désactivé), copiez-collez notre lien Bitpanda (affilié)&nbsp;: <code>https://bitpanda.pxf.io/7XePPV</code></p>
 </div>
 </section>
 </main>
