--- a/es/bitpanda/index.html
+++ b/es/bitpanda/index.html
@@ -39,7 +39,41 @@
       'security_storage': 'granted'
     });
     window.__GA_MEASUREMENT_ID__ = 'G-GL3T4Y8WHK';
-  </script></head>
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Home","item":"https://avis-invest.com/es/"},
+        {"@type":"ListItem","position":2,"name":"Bitpanda","item":"https://avis-invest.com/es/bitpanda/"}
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"FAQPage",
+      "mainEntity":[
+        {
+          "@type":"Question",
+          "name":"¿Es adecuado para principiantes?",
+          "acceptedAnswer":{"@type":"Answer","text":"En general, sí. Aun así, tómese el tiempo de entender las comisiones y los riesgos antes de invertir."}
+        },
+        {
+          "@type":"Question",
+          "name":"¿Debo activar el 2FA?",
+          "acceptedAnswer":{"@type":"Answer","text":"Sí. Active la autenticación de dos factores (2FA) tras crear la cuenta y no reutilice contraseñas."}
+        },
+        {
+          "@type":"Question",
+          "name":"¿La oferta es la misma en todos los países?",
+          "acceptedAnswer":{"@type":"Answer","text":"No. Los productos y la disponibilidad pueden variar según la normativa y el país de residencia."}
+        }
+      ]
+    }
+  </script>
+</head>
 <body>
 <!-- Sticky risk banner (cripto) -->
 <div aria-label="Advertencia de riesgo cripto" class="risk-banner" role="note">
@@ -189,7 +223,7 @@
 <h2>Abrir una cuenta en Bitpanda</h2>
 <p>El botón de abajo es un enlace de afiliación (puede generarnos una comisión sin coste adicional para usted).</p>
 <p><a class="btn cta" data-aff="bitpanda" href="#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Ir a Bitpanda</a></p>
-<p class="small note">Si el botón no funciona (JavaScript desactivado), copie y pegue la URL oficial: <code>https://www.bitpanda.com/</code></p>
+<p class="small note">Si el botón no funciona (JavaScript desactivado), copie y pegue nuestro enlace de afiliación de Bitpanda: <code>https://bitpanda.pxf.io/7XePPV</code></p>
 </div>
 </section>
 </main>
@@ -245,4 +279,3 @@
 <script defer="" src="/main.min.js"></script>
 </body>
 </html>
-
