--- a/de/bitpanda/index.html
+++ b/de/bitpanda/index.html
@@ -39,7 +39,41 @@
       'security_storage': 'granted'
     });
     window.__GA_MEASUREMENT_ID__ = 'G-GL3T4Y8WHK';
-  </script></head>
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Startseite","item":"https://avis-invest.com/de/"},
+        {"@type":"ListItem","position":2,"name":"Bitpanda","item":"https://avis-invest.com/de/bitpanda/"}
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"FAQPage",
+      "mainEntity":[
+        {
+          "@type":"Question",
+          "name":"Ist es für Einsteiger geeignet?",
+          "acceptedAnswer":{"@type":"Answer","text":"In der Regel ja. Nehmen Sie sich trotzdem Zeit, Gebühren und Risiken zu verstehen, bevor Sie investieren."}
+        },
+        {
+          "@type":"Question",
+          "name":"Sollte ich 2FA aktivieren?",
+          "acceptedAnswer":{"@type":"Answer","text":"Ja. Aktivieren Sie Zwei-Faktor-Authentifizierung (2FA) direkt nach der Registrierung und vermeiden Sie Passwort-Wiederverwendung."}
+        },
+        {
+          "@type":"Question",
+          "name":"Ist das Angebot in jedem Land gleich?",
+          "acceptedAnswer":{"@type":"Answer","text":"Nein. Produkte und Verfügbarkeit können je nach Regulierung und Wohnsitz variieren."}
+        }
+      ]
+    }
+  </script>
+</head>
 <body>
 <!-- Sticky risk banner (krypto) -->
 <div aria-label="Krypto-Risikohinweis" class="risk-banner" role="note">
@@ -189,7 +223,7 @@
 <h2>Bitpanda-Konto eröffnen</h2>
 <p>Der Button unten ist ein Affiliate-Link (er kann eine Provision ohne Mehrkosten für Sie auslösen).</p>
 <p><a class="btn cta" data-aff="bitpanda" href="#konto-eroeffnen" rel="sponsored noopener noreferrer" target="_blank">Zu Bitpanda</a></p>
-<p class="small note">Wenn der Button nicht funktioniert (JavaScript deaktiviert), kopieren Sie die offizielle URL: <code>https://www.bitpanda.com/</code></p>
+<p class="small note">Wenn der Button nicht funktioniert (JavaScript deaktiviert), kopieren Sie unseren Bitpanda-Affiliate-Link: <code>https://bitpanda.pxf.io/7XePPV</code></p>
 </div>
 </section>
 </main>
@@ -245,4 +279,3 @@
 <script defer="" src="/main.min.js"></script>
 </body>
 </html>
-
