--- a/en/bitpanda/index.html
+++ b/en/bitpanda/index.html
@@ -39,7 +39,41 @@
       'security_storage': 'granted'
     });
     window.__GA_MEASUREMENT_ID__ = 'G-GL3T4Y8WHK';
-  </script></head>
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Home","item":"https://avis-invest.com/en/"},
+        {"@type":"ListItem","position":2,"name":"Bitpanda","item":"https://avis-invest.com/en/bitpanda/"}
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"FAQPage",
+      "mainEntity":[
+        {
+          "@type":"Question",
+          "name":"Is it suitable for beginners?",
+          "acceptedAnswer":{"@type":"Answer","text":"Generally yes. Still, take time to understand fees and risks before investing."}
+        },
+        {
+          "@type":"Question",
+          "name":"Should I enable 2FA?",
+          "acceptedAnswer":{"@type":"Answer","text":"Yes. Enable two-factor authentication (2FA) right after signup and avoid password reuse."}
+        },
+        {
+          "@type":"Question",
+          "name":"Is the offer the same in every country?",
+          "acceptedAnswer":{"@type":"Answer","text":"No. Products and availability can differ depending on regulation and residency."}
+        }
+      ]
+    }
+  </script>
+</head>
 <body>
 <!-- Sticky risk banner (crypto) -->
 <div aria-label="Crypto risk warning" class="risk-banner" role="note">
@@ -189,7 +223,7 @@
 <h2>Open a Bitpanda account</h2>
 <p>The button below is an affiliate link (it may generate a commission at no extra cost to you).</p>
 <p><a class="btn cta" data-aff="bitpanda" href="#open-account" rel="sponsored noopener noreferrer" target="_blank">Go to Bitpanda</a></p>
-<p class="small note">If the button doesn’t work (JavaScript disabled), copy/paste the official URL: <code>https://www.bitpanda.com/</code></p>
+<p class="small note">If the button doesn’t work (JavaScript disabled), copy/paste our Bitpanda affiliate link: <code>https://bitpanda.pxf.io/7XePPV</code></p>
 </div>
 </section>
 </main>
