Improve Bitpanda page content

--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -67,6 +67,31 @@
         },
         {
           "@type":"Question",
+          "name":"Quels frais dois-je attendre sur les crypto ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda indique que le coût est affiché avant validation et peut varier selon l’actif (fourchette annoncée : 0,00% à 2,49%). Consultez le récapitulatif avant de confirmer."}
+        },
+        {
+          "@type":"Question",
+          "name":"Bitpanda propose-t-il des actions et des ETFs ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Oui, via Real Stocks & ETFs (Real Securities) selon votre pays. Bitpanda indique que les ordres sont exécutés sur une bourse régulée avec des horaires de marché (lun–ven 07:30–23:00, pas 24/7) et qu’un spread (bid/ask) s’applique."}
+        },
+        {
+          "@type":"Question",
+          "name":"Quel est le montant minimum pour commencer ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda indique un minimum de 10 € (ou équivalent) pour les dépôts/retraits fiat et 1 € (ou équivalent) pour acheter/vendre/swap des crypto-actifs."}
+        },
+        {
+          "@type":"Question",
+          "name":"La Bitpanda Card est-elle disponible en France ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda indique que la carte est disponible pour les résidents de la zone euro (France incluse), avec des exceptions (Chypre, Liechtenstein) et sous conditions (compte vérifié, application mobile…)."}
+        },
+        {
+          "@type":"Question",
+          "name":"Bitpanda peut-il demander des justificatifs de fonds ?",
+          "acceptedAnswer":{"@type":"Answer","text":"Oui. Dans certains cas, Bitpanda peut demander des documents de proof of funds / proof of wealth (fonds/patrimoine) dans le cadre des obligations de conformité."}
+        },
+        {
+          "@type":"Question",
           "name":"Les services sont-ils identiques dans tous les pays ?",
           "acceptedAnswer":{"@type":"Answer","text":"Non. L’offre peut varier selon la réglementation et votre pays de résidence."}
         }
@@ -131,60 +156,258 @@
 <p class="small note">Les crypto-actifs peuvent varier fortement à la hausse comme à la baisse. Investissez uniquement ce que vous pouvez vous permettre de perdre.</p>
 </div>
 <div class="hero-media">
-<img alt="Icônes crypto (BTC/ETH)" decoding="async" fetchpriority="high" height="400" src="/images/btc.svg" width="800"/>
+<img alt="Illustration portefeuille : crypto, actions/ETF et métaux" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
 </div>
+</div>
+</section>
+<!-- Sommaire -->
+<section class="how-it-works" id="sommaire">
+<div class="container">
+<h2>Sommaire</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Comprendre Bitpanda</h3>
+<ul class="ref-list">
+<li><a href="#en-bref">Bitpanda en bref</a></li>
+<li><a href="#fonctionnalites">Produits &amp; services</a></li>
+<li><a href="#frais">Frais &amp; minimums</a></li>
+<li><a href="#securite">Sécurité &amp; conformité</a></li>
+</ul>
+</article>
+<article class="card">
+<h3>Aller plus loin</h3>
+<ul class="ref-list">
+<li><a href="#comment-demarrer">Comment démarrer</a></li>
+<li><a href="#bitpanda-card">Bitpanda Card</a></li>
+<li><a href="#faq">FAQ</a></li>
+<li><a href="#ouvrir-compte">Ouvrir un compte</a></li>
+</ul>
+</article>
+</div>
+<p class="small note">Les informations ci-dessous proviennent de sources publiques Bitpanda et peuvent évoluer. Vérifiez toujours les détails affichés dans l’application/website Bitpanda avant d’agir.</p>
+</div>
+</section>
+<!-- En bref -->
+<section class="features" id="en-bref">
+<div class="container">
+<h2>Bitpanda en bref</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Profil (infos publiques)</h3>
+<ul class="ref-list">
+<li>Entreprise fondée en <strong>2014</strong> à <strong>Vienne (Autriche)</strong>.</li>
+<li>Bitpanda indique compter <strong>plus de 7&nbsp;millions d’utilisateurs</strong> et <strong>plus de 700 employés</strong>.</li>
+<li>Plateforme disponible dans <strong>plus de 40 pays en Europe</strong> (selon Bitpanda).</li>
+</ul>
+</article>
+<article class="card">
+<h3>À vérifier avant inscription</h3>
+<ul class="ref-list">
+<li>Éligibilité : pays de résidence, âge, documents d’identité acceptés.</li>
+<li>KYC obligatoire + contrôles de conformité (anti-fraude/AML).</li>
+<li>Frais : regardez le récapitulatif (coût exact) avant confirmation.</li>
+</ul>
+</article>
+</div>
+<div class="table-responsive" aria-label="Repères rapides Bitpanda">
+<table>
+<thead>
+<tr><th>Repère</th><th>Détail (indicatif)</th></tr>
+</thead>
+<tbody>
+<tr><th scope="row">Devises fiat supportées</th><td>EUR, USD, GBP, CHF, TRY, PLN, HUF, CZK, DKK, SEK (selon pays).</td></tr>
+<tr><th scope="row">Minimum fiat</th><td>Dépôt / retrait : à partir de <strong>10&nbsp;€</strong> (ou équivalent).</td></tr>
+<tr><th scope="row">Minimum crypto</th><td>Achat / vente / swap : à partir de <strong>1&nbsp;€</strong> (ou équivalent).</td></tr>
+<tr><th scope="row">Actions/ETF</th><td>Real Stocks &amp; ETFs : Bitpanda indique ne pas facturer de commissions/overnight fees, mais un <strong>spread</strong> (bid/ask) s’applique (selon montant et marché).</td></tr>
+</tbody>
+</table>
+</div>
+<p class="small note">Ces repères sont donnés à titre informatif et peuvent changer. Vérifiez dans Bitpanda avant toute opération.</p>
 </div>
 </section>
 <!-- Fonctionnalités -->
 <section class="features" id="fonctionnalites">
 <div class="container">
-<h2>Fonctionnalités clés</h2>
+<h2>Produits &amp; services (selon pays)</h2>
 <div class="grid-3">
 <article class="card">
-<h3>Achat &amp; vente de crypto-actifs</h3>
-<p>Accédez à une sélection de crypto-actifs via une interface orientée débutants (disponibilité selon pays).</p>
+<h3>Crypto (achat/vente/swap)</h3>
+<p>Bitpanda affiche le coût exact avant validation. Les frais peuvent varier selon l’actif (fourchette annoncée&nbsp;: <strong>0,00% à 2,49%</strong>). Exemple : premium Bitcoin <strong>0,99%</strong> à l’achat comme à la vente.</p>
 </article>
 <article class="card">
-<h3>Expérience utilisateur</h3>
-<p>Une approche “tout-en-un” pour suivre votre portefeuille et gérer vos opérations au même endroit.</p>
+<h3>Actions &amp; ETFs (Real Securities)</h3>
+<p>Possession réelle des titres, ordres exécutés sur une bourse régulée (heures de marché). Bitpanda indique ne pas facturer de commissions, mais un <strong>spread</strong> (bid/ask) s’applique.</p>
 </article>
 <article class="card">
-<h3>Sécurité &amp; bonnes pratiques</h3>
-<p>Activez les protections de compte (ex. 2FA) et appliquez une gestion du risque adaptée à votre profil.</p>
+<h3>Métaux précieux</h3>
+<p>Or, argent, platine et palladium (métaux physiques, selon Bitpanda). Des premiums s’appliquent (ex. or&nbsp;: <strong>0,5%</strong> achat / <strong>1%</strong> vente) et Bitpanda indique ne pas facturer de frais de garde/stockage.</p>
+</article>
+<article class="card">
+<h3>Bitpanda Card</h3>
+<p>Carte Visa (selon éligibilité) pour dépenser vos actifs. Bitpanda indique que les retraits DAB coûtent <strong>2%</strong> du retrait (minimum <strong>2&nbsp;€</strong>) et que chaque paiement déclenche une conversion (trade) avec les frais habituels.</p>
+</article>
+<article class="card">
+<h3>Plans d’épargne</h3>
+<p>Pour lisser votre point d’entrée, Bitpanda propose des plans d’épargne (montant minimal annoncé&nbsp;: <strong>10&nbsp;€</strong> ou équivalent).</p>
+</article>
+<article class="card">
+<h3>Sécurité (bonnes pratiques)</h3>
+<p>Activez la <strong>2FA</strong>, surveillez les sessions actives et restez vigilant face au phishing. Bitpanda indique stocker la <strong>grande majorité</strong> des crypto-actifs hors ligne (cold storage).</p>
 </article>
 </div>
-<ul aria-label="Exemples de crypto-actifs" class="tickers">
+<ul aria-label="Exemples d’actifs" class="tickers">
 <li><img alt="" aria-hidden="true" decoding="async" height="20" src="/images/btc.svg" width="20"/> BTC</li>
 <li><img alt="" aria-hidden="true" decoding="async" height="20" src="/images/eth.svg" width="20"/> ETH</li>
+<li>Or</li>
+<li>ETF</li>
 </ul>
 </div>
 </section>
 <!-- Comment ça marche -->
-<section class="how-it-works">
+<section class="how-it-works" id="comment-demarrer">
 <div class="container">
 <h2>Comment démarrer</h2>
 <ol class="steps">
-<li>Créez un compte et complétez les étapes d’inscription demandées.</li>
-<li>Sécurisez votre compte (mot de passe fort, 2FA).</li>
-<li>Consultez les frais, puis effectuez un premier achat si cela correspond à votre stratégie.</li>
+<li>Vérifiez l’éligibilité (pays de résidence, documents acceptés) et créez un compte.</li>
+<li>Complétez la vérification d’identité (KYC) et, si demandé, fournissez des justificatifs (fonds/patrimoine).</li>
+<li>Activez la sécurité : mot de passe unique + 2FA + vérification des appareils/sessions.</li>
+<li>Déposez des fonds (minimum annoncé&nbsp;: 10&nbsp;€ ou équivalent) puis consultez le récapitulatif des frais.</li>
+<li>Commencez avec un montant adapté à votre profil (minimum crypto annoncé&nbsp;: 1&nbsp;€ ou équivalent).</li>
+<li>Suivez votre exposition et évitez de multiplier les opérations si les coûts/spreads sont défavorables.</li>
 </ol>
+<div class="grid-2">
+<article class="card">
+<h3>Checklist sécurité</h3>
+<ul class="ref-list">
+<li>Activez la 2FA dès l’inscription (application d’authentification).</li>
+<li>Vérifiez les sessions actives et déconnectez les appareils inconnus.</li>
+<li>Ne cliquez pas sur des liens reçus par message : tapez l’URL vous‑même.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Checklist frais</h3>
+<ul class="ref-list">
+<li>Regardez toujours le <strong>récapitulatif</strong> avant confirmation (coût exact).</li>
+<li>Comparez : spreads/premiums + frais de dépôt/retrait selon le moyen de paiement.</li>
+<li>Pour les titres (actions/ETF), retenez que les marchés ont des <strong>horaires</strong> et qu’un <strong>spread</strong> (bid/ask) peut s’appliquer.</li>
+</ul>
+</article>
+</div>
 </div>
 </section>
 <!-- Frais -->
-<section class="fees">
+<section class="fees" id="frais">
 <div class="container">
 <h2>Frais : ce qu’il faut vérifier</h2>
 <div class="grid-2">
 <article class="card">
 <h3>Frais de transaction</h3>
-<p>Selon le produit et le mode d’exécution, des frais peuvent s’appliquer. Vérifiez toujours l’estimation affichée avant validation.</p>
+<p>Bitpanda indique que le coût est intégré au prix final et affiché dans le récapitulatif (fourchette annoncée&nbsp;: <strong>0,00% à 2,49%</strong> selon l’actif). Évitez les achats “au marché” en période de forte volatilité.</p>
 </article>
 <article class="card">
 <h3>Dépôts / retraits</h3>
-<p>Les méthodes de paiement disponibles et leurs frais éventuels varient selon votre pays.</p>
+<p>Les méthodes et les frais éventuels varient selon votre pays (ex. SEPA, carte, e-wallet). Minimum fiat annoncé&nbsp;: <strong>10&nbsp;€</strong> (ou équivalent). Vérifiez aussi les conversions si votre devise diffère.</p>
 </article>
 </div>
+<div class="table-responsive" aria-label="Résumé des coûts Bitpanda (indicatif)">
+<table>
+<thead>
+<tr><th>Produit</th><th>Frais / premiums (indicatif)</th><th>À savoir</th></tr>
+</thead>
+<tbody>
+<tr>
+<td>Crypto (broker)</td>
+<td>Frais inclus dans le prix final. Fourchette annoncée : 0,00% à 2,49%. Exemple : Bitcoin 0,99% achat &amp; vente.</td>
+<td>Le récapitulatif indique le coût exact avant confirmation.</td>
+</tr>
+<tr>
+<td>Actions &amp; ETFs (Real Securities)</td>
+<td>Bitpanda indique ne pas facturer de commissions/overnight fees, mais un <strong>spread</strong> (bid/ask) s’applique.</td>
+<td>Heures de marché annoncées : lun–ven 07:30–23:00 (pas 24/7).</td>
+</tr>
+<tr>
+<td>Métaux précieux</td>
+<td>Or 0,5% achat / 1% vente · Argent 2,5% / 2% · Platine 2,5% / 2% · Palladium 2,2% / 1,8%.</td>
+<td>Bitpanda indique ne pas facturer de frais de garde/stockage.</td>
+</tr>
+<tr>
+<td>Fiat</td>
+<td>Dépôt/retrait minimum annoncé : 10&nbsp;€ (ou équivalent).</td>
+<td>Frais possibles selon la méthode (SEPA, carte, e-wallet…).</td>
+</tr>
+</tbody>
+</table>
+</div>
 <p class="small note">Ce site est indépendant : les conditions, frais et services peuvent évoluer. Consultez les informations officielles sur Bitpanda avant toute décision.</p>
+</div>
+</section>
+<!-- Sécurité & conformité -->
+<section class="features" id="securite">
+<div class="container">
+<h2>Sécurité &amp; conformité : points concrets</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Ce que Bitpanda indique</h3>
+<ul class="ref-list">
+<li>Stockage hors ligne (cold storage) de la grande majorité des crypto-actifs.</li>
+<li>Gestion des sessions/appareils et confirmations supplémentaires sur les actions sensibles.</li>
+<li>Service custodial : vous n’avez généralement pas accès aux clés privées via l’app.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Ce que vous devez faire</h3>
+<ul class="ref-list">
+<li>Activer 2FA + mot de passe unique + e-mail sécurisé.</li>
+<li>Vérifier régulièrement les appareils/sessions connectés.</li>
+<li>Rester vigilant contre le phishing et les faux supports.</li>
+</ul>
+</article>
+<article class="card">
+<h3>KYC / justificatifs</h3>
+<ul class="ref-list">
+<li>Vérification d’identité obligatoire (KYC).</li>
+<li>Bitpanda peut demander des justificatifs de fonds/patrimoine (PoF/PoW) dans certains cas.</li>
+<li>Répondre aux demandes de conformité évite des blocages de dépôts/retraits.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Assurance (selon éligibilité)</h3>
+<ul class="ref-list">
+<li>Bitpanda décrit un programme d’assurance pour des actifs numériques éligibles détenus en custody (conditions/pro‑rata).</li>
+<li>Vérifiez les exclusions, plafonds et périmètre avant de vous y fier.</li>
+</ul>
+</article>
+</div>
+<p class="small note">Les mesures exactes dépendent des produits et de votre pays. Consultez les pages d’aide Bitpanda pour les détails à jour.</p>
+</div>
+</section>
+<!-- Bitpanda Card -->
+<section class="fees" id="bitpanda-card">
+<div class="container">
+<h2>Bitpanda Card : ce qu’il faut savoir</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Éligibilité (résumé)</h3>
+<ul class="ref-list">
+<li>Disponible dans les pays de la <strong>zone euro</strong>, sauf exceptions (Chypre, Liechtenstein) selon Bitpanda.</li>
+<li>Compte Bitpanda <strong>vérifié</strong> + installation de l’<strong>application mobile</strong> (fonctionnalités carte via l’app).</li>
+<li>Éligibilité selon pays et type de vérification (Bitpanda indique que certains modes, ex. Bankident, peuvent ne pas être éligibles).</li>
+</ul>
+</article>
+<article class="card">
+<h3>Frais &amp; limites (indicatif)</h3>
+<ul class="ref-list">
+<li>Chaque paiement déclenche une conversion (trade) avec les <strong>frais habituels</strong> de trading.</li>
+<li>Retrait DAB : <strong>2%</strong> du retrait ou minimum <strong>2&nbsp;€</strong> (selon Bitpanda).</li>
+<li>La première commande de carte est annoncée <strong>gratuite</strong> ; livraison jusqu’à <strong>20 jours ouvrés</strong> (DHL) selon Bitpanda.</li>
+<li>Plafonds &amp; paramètres : à vérifier dans l’app (ils peuvent évoluer).</li>
+</ul>
+</article>
+</div>
+<div class="center">
+<a class="btn cta" data-aff="bitpanda" href="#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Découvrir Bitpanda</a>
+</div>
+<p class="small note">Vérifiez dans Bitpanda les frais et plafonds exacts (ils peuvent évoluer).</p>
 </div>
 </section>
 <!-- Risques -->
@@ -215,6 +438,40 @@
 <summary>Les services sont-ils identiques dans tous les pays&nbsp;?</summary>
 <p>Non. L’offre peut varier selon la réglementation et votre pays de résidence.</p>
 </details>
+<details>
+<summary>Quels frais dois-je attendre sur les crypto&nbsp;?</summary>
+<p>Bitpanda indique que le coût est affiché avant validation et peut varier selon l’actif (fourchette annoncée : 0,00% à 2,49%). Consultez le récapitulatif avant de confirmer.</p>
+</details>
+<details>
+<summary>Bitpanda propose-t-il des actions et des ETFs&nbsp;?</summary>
+<p>Oui, via Real Stocks &amp; ETFs (Real Securities) selon votre pays. Bitpanda indique que les ordres sont exécutés sur une bourse régulée, avec des horaires de marché (lun–ven 07:30–23:00, pas 24/7) et qu’un spread (bid/ask) peut s’appliquer.</p>
+</details>
+<details>
+<summary>Quel est le montant minimum pour commencer&nbsp;?</summary>
+<p>Bitpanda indique un minimum de 10&nbsp;€ (ou équivalent) pour les dépôts/retraits fiat et 1&nbsp;€ (ou équivalent) pour acheter/vendre/swap des crypto-actifs.</p>
+</details>
+<details>
+<summary>La Bitpanda Card est-elle disponible en France&nbsp;?</summary>
+<p>Bitpanda indique que la carte est disponible pour les résidents de la zone euro (France incluse), avec des exceptions (Chypre, Liechtenstein) et sous conditions (compte vérifié, application mobile…).</p>
+</details>
+<details>
+<summary>Bitpanda peut-il demander des justificatifs de fonds&nbsp;?</summary>
+<p>Oui. Dans certains cas, Bitpanda peut demander des documents de proof of funds / proof of wealth (fonds/patrimoine) dans le cadre des obligations de conformité.</p>
+</details>
+</div>
+</section>
+<!-- Sources officielles -->
+<section class="sources" id="sources-officielles">
+<div class="container">
+<h2>Sources officielles (pour vérifier)</h2>
+<ul class="ref-list">
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360000902525-What-fees-and-premiums-can-I-expect-to-pay-on-Bitpanda" rel="noopener noreferrer" target="_blank">Frais &amp; premiums (Bitpanda Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/24575224671516-Real-Stocks-ETFs-on-Bitpanda" rel="noopener noreferrer" target="_blank">Real Stocks &amp; ETFs (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360000645145-How-can-I-secure-my-Bitpanda-account" rel="noopener noreferrer" target="_blank">Sécuriser son compte (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360019578140-Who-can-use-Bitpanda" rel="noopener noreferrer" target="_blank">Éligibilité / pays (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360018933120-What-is-the-Bitpanda-Card-and-what-are-its-benefits" rel="noopener noreferrer" target="_blank">Bitpanda Card (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/115005280545-What-is-the-minimum-deposit-and-withdrawal-amount-for-cryptocurrencies-and-fiat-currencies" rel="noopener noreferrer" target="_blank">Minimums dépôt/retrait (Helpdesk)</a></li>
+</ul>
 </div>
 </section>
 <!-- Ouvrir un compte -->
