--- a/de/bitpanda/index.html
+++ b/de/bitpanda/index.html
@@ -67,6 +67,31 @@
         },
         {
           "@type":"Question",
+          "name":"Welche Gebühren sollte ich bei Krypto erwarten?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda gibt an, dass die Kosten vor Bestätigung angezeigt werden und je nach Asset variieren können (genannte Spanne: 0,00% bis 2,49%). Prüfen Sie die Trade-Übersicht vor dem Bestätigen."}
+        },
+        {
+          "@type":"Question",
+          "name":"Bietet Bitpanda Aktien und ETFs an?",
+          "acceptedAnswer":{"@type":"Answer","text":"Ja, über Real Stocks & ETFs (Real Securities) je nach Land. Bitpanda gibt an, dass Orders an einer regulierten Börse mit Marktzeiten (Mo–Fr 07:30–23:00, nicht 24/7) ausgeführt werden und dass ein Spread (Bid/Ask) anfallen kann."}
+        },
+        {
+          "@type":"Question",
+          "name":"Was ist der Mindestbetrag zum Start?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda nennt 10 € (oder Gegenwert) als Mindestbetrag für Fiat Ein-/Auszahlungen und 1 € (oder Gegenwert) für Krypto Kauf/Verkauf/Swap."}
+        },
+        {
+          "@type":"Question",
+          "name":"Wer kann die Bitpanda Card bestellen?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda gibt an, dass die Karte in Eurozonen-Ländern verfügbar ist (mit Ausnahmen wie Zypern und Liechtenstein) und ein verifiziertes Konto sowie die Mobile App zur Verwaltung erfordert."}
+        },
+        {
+          "@type":"Question",
+          "name":"Kann Bitpanda Proof-of-Funds anfordern?",
+          "acceptedAnswer":{"@type":"Answer","text":"Ja. In manchen Fällen kann Bitpanda Proof of Funds / Proof of Wealth als Teil von Compliance-Pflichten anfordern."}
+        },
+        {
+          "@type":"Question",
           "name":"Ist das Angebot in jedem Land gleich?",
           "acceptedAnswer":{"@type":"Answer","text":"Nein. Produkte und Verfügbarkeit können je nach Regulierung und Wohnsitz variieren."}
         }
@@ -131,60 +156,258 @@
 <p class="small note">Krypto-Assets können stark steigen oder fallen. Investieren Sie nur, was Sie sich leisten können zu verlieren.</p>
 </div>
 <div class="hero-media">
-<img alt="Krypto-Icons (BTC/ETH)" decoding="async" fetchpriority="high" height="400" src="/images/btc.svg" width="800"/>
+<img alt="Portfolio-Illustration: Krypto, Aktien/ETFs und Metalle" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
 </div>
+</div>
+</section>
+<!-- Inhaltsverzeichnis -->
+<section class="how-it-works" id="inhalt">
+<div class="container">
+<h2>Inhalt</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Bitpanda verstehen</h3>
+<ul class="ref-list">
+<li><a href="#kurzfakten">Kurzfakten</a></li>
+<li><a href="#funktionen">Produkte &amp; Leistungen</a></li>
+<li><a href="#gebuehren">Gebühren &amp; Mindestbeträge</a></li>
+<li><a href="#sicherheit">Sicherheit &amp; Compliance</a></li>
+</ul>
+</article>
+<article class="card">
+<h3>Praktisch</h3>
+<ul class="ref-list">
+<li><a href="#einstieg">So starten Sie</a></li>
+<li><a href="#bitpanda-card">Bitpanda Card</a></li>
+<li><a href="#faq">FAQ</a></li>
+<li><a href="#konto-eroeffnen">Konto eröffnen</a></li>
+</ul>
+</article>
+</div>
+<p class="small note">Die folgenden Angaben stammen aus öffentlichen Bitpanda-Quellen und können sich ändern. Prüfen Sie Details immer in der Bitpanda App/Website.</p>
+</div>
+</section>
+<!-- Kurzfakten -->
+<section class="features" id="kurzfakten">
+<div class="container">
+<h2>Bitpanda auf einen Blick</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Profil (öffentliche Infos)</h3>
+<ul class="ref-list">
+<li>Unternehmen gegründet <strong>2014</strong> in <strong>Wien (Österreich)</strong>.</li>
+<li>Bitpanda nennt <strong>7+ Mio. Nutzer</strong> und <strong>700+ Mitarbeitende</strong>.</li>
+<li>In <strong>40+ Ländern in Europa</strong> verfügbar (laut Bitpanda).</li>
+</ul>
+</article>
+<article class="card">
+<h3>Vor der Anmeldung prüfen</h3>
+<ul class="ref-list">
+<li>Eligibility: Wohnsitzland, Alter, akzeptierte Ausweisdokumente.</li>
+<li>Identitätsprüfung (KYC) + Compliance-Checks.</li>
+<li>Gebühren: Trade-Übersicht (exakte Kosten) vor Bestätigung prüfen.</li>
+</ul>
+</article>
+</div>
+<div class="table-responsive" aria-label="Bitpanda Kurzfakten">
+<table>
+<thead>
+<tr><th>Referenz</th><th>Detail (indikativ)</th></tr>
+</thead>
+<tbody>
+<tr><th scope="row">Unterstützte Fiat-Währungen</th><td>EUR, USD, GBP, CHF, TRY, PLN, HUF, CZK, DKK, SEK (je nach Land).</td></tr>
+<tr><th scope="row">Fiat-Mindestbeträge</th><td>Einzahlungen / Auszahlungen: ab <strong>10&nbsp;€</strong> (oder Gegenwert).</td></tr>
+<tr><th scope="row">Krypto-Mindestbeträge</th><td>Kauf / Verkauf / Swap: ab <strong>1&nbsp;€</strong> (oder Gegenwert).</td></tr>
+<tr><th scope="row">Aktien/ETFs</th><td>Real Stocks &amp; ETFs: Bitpanda gibt an, keine Kommissionen/Overnight Fees zu berechnen, aber ein <strong>Spread</strong> (Bid/Ask) fällt an (abhängig von Ordergröße und Markt).</td></tr>
+</tbody>
+</table>
+</div>
+<p class="small note">Diese Punkte sind informativ und können sich ändern. Prüfen Sie Angaben in Bitpanda vor Transaktionen.</p>
 </div>
 </section>
 <!-- Funktionen -->
 <section class="features" id="funktionen">
 <div class="container">
-<h2>Wichtige Funktionen</h2>
+<h2>Produkte &amp; Leistungen (je nach Land)</h2>
 <div class="grid-3">
 <article class="card">
-<h3>Krypto-Assets kaufen &amp; verkaufen</h3>
-<p>Zugriff auf eine Auswahl an Krypto-Assets über eine einsteigerfreundliche Oberfläche (je nach Land).</p>
+<h3>Krypto (Kauf/Verkauf/Swap)</h3>
+<p>Bitpanda gibt an, dass die exakten Kosten vor Bestätigung angezeigt werden. Gebühren können je nach Asset variieren (genannte Spanne: <strong>0,00% bis 2,49%</strong>). Beispiel: Bitcoin-Premium <strong>0,99%</strong> beim Kauf und Verkauf.</p>
 </article>
 <article class="card">
-<h3>Nutzererlebnis</h3>
-<p>“All-in-one” Ansatz, um Portfolio und Aktionen an einem Ort zu verwalten.</p>
+<h3>Aktien &amp; ETFs (Real Securities)</h3>
+<p>Echter Besitz, Orders an einer regulierten Börse zu Marktzeiten. Bitpanda gibt an, keine Kommissionen zu berechnen, aber ein <strong>Spread</strong> (Bid/Ask) kann anfallen.</p>
 </article>
 <article class="card">
-<h3>Sicherheit &amp; Best Practices</h3>
-<p>Aktivieren Sie Kontoschutz (z. B. 2FA) und nutzen Sie ein Risikomanagement passend zu Ihrem Profil.</p>
+<h3>Edelmetalle</h3>
+<p>Gold, Silber, Platin und Palladium (physische Metalle, laut Bitpanda). Premiums fallen an (z.&nbsp;B. Gold: <strong>0,5%</strong> Kauf / <strong>1%</strong> Verkauf) und Bitpanda gibt an, keine Verwahr-/Lagergebühren zu berechnen.</p>
+</article>
+<article class="card">
+<h3>Bitpanda Card</h3>
+<p>Visa-Karte (je nach Eligibility), um Assets auszugeben. Bitpanda gibt an, dass ATM-Abhebungen <strong>2%</strong> der Abhebung kosten (mindestens <strong>2&nbsp;€</strong>) und dass jede Zahlung eine In‑App‑Konvertierung (Trade) mit den üblichen Trading‑Gebühren auslöst.</p>
+</article>
+<article class="card">
+<h3>Sparpläne</h3>
+<p>Für regelmäßige Käufe bietet Bitpanda Sparpläne (genannter Mindestbetrag: <strong>10&nbsp;€</strong> oder Gegenwert).</p>
+</article>
+<article class="card">
+<h3>Sicherheit (Best Practices)</h3>
+<p>Aktivieren Sie <strong>2FA</strong>, prüfen Sie aktive Sessions und achten Sie auf Phishing. Bitpanda gibt an, die <strong>große Mehrheit</strong> der Krypto-Assets offline (Cold Storage) zu lagern.</p>
 </article>
 </div>
-<ul aria-label="Beispiele für Krypto-Assets" class="tickers">
+<ul aria-label="Asset-Beispiele" class="tickers">
 <li><img alt="" aria-hidden="true" decoding="async" height="20" src="/images/btc.svg" width="20"/> BTC</li>
 <li><img alt="" aria-hidden="true" decoding="async" height="20" src="/images/eth.svg" width="20"/> ETH</li>
+<li>Gold</li>
+<li>ETF</li>
 </ul>
 </div>
 </section>
 <!-- Einstieg -->
-<section class="how-it-works">
+<section class="how-it-works" id="einstieg">
 <div class="container">
 <h2>So starten Sie</h2>
 <ol class="steps">
-<li>Konto erstellen und die geforderten Schritte abschließen.</li>
-<li>Konto absichern (starkes Passwort, 2FA).</li>
-<li>Gebühren prüfen und erst dann kaufen, wenn es zu Ihrer Strategie passt.</li>
+<li>Eligibility prüfen (Wohnsitzland, akzeptierte Dokumente) und Konto erstellen.</li>
+<li>Identitätsprüfung (KYC) abschließen und ggf. Nachweise (Proof of Funds/Wealth) bereitstellen.</li>
+<li>Sicherheit aktivieren: einzigartiges Passwort + 2FA + Geräte/Sessions prüfen.</li>
+<li>Geld einzahlen (genannter Mindestbetrag: 10&nbsp;€ oder Gegenwert) und Gebührenübersicht prüfen.</li>
+<li>Mit einer Größe starten, die zum Profil passt (genannter Krypto-Mindestbetrag: 1&nbsp;€ oder Gegenwert).</li>
+<li>Exposure überwachen und Overtrading vermeiden, wenn Kosten/Spreads ungünstig sind.</li>
 </ol>
+<div class="grid-2">
+<article class="card">
+<h3>Sicherheits-Checkliste</h3>
+<ul class="ref-list">
+<li>2FA sofort aktivieren (Authenticator-App).</li>
+<li>Aktive Sessions prüfen und unbekannte Geräte abmelden.</li>
+<li>Keine Links aus Nachrichten anklicken: URL selbst eingeben.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Gebühren-Checkliste</h3>
+<ul class="ref-list">
+<li>Immer die <strong>Trade-Übersicht</strong> vor Bestätigung prüfen (exakte Kosten).</li>
+<li>Vergleichen: Spreads/Premiums + Ein-/Auszahlungsgebühren je nach Methode.</li>
+<li>Bei Wertpapieren (Aktien/ETFs) an <strong>Marktzeiten</strong> und mögliche <strong>Spreads</strong> (Bid/Ask) denken.</li>
+</ul>
+</article>
+</div>
 </div>
 </section>
 <!-- Gebühren -->
-<section class="fees">
+<section class="fees" id="gebuehren">
 <div class="container">
 <h2>Gebühren: worauf Sie achten sollten</h2>
 <div class="grid-2">
 <article class="card">
 <h3>Transaktionsgebühren</h3>
-<p>Je nach Produkt und Ausführung können Gebühren anfallen. Prüfen Sie die Schätzung vor der Bestätigung.</p>
+<p>Bitpanda gibt an, dass die Kosten im Endpreis enthalten sind und in der Übersicht angezeigt werden (genannte Spanne: <strong>0,00% bis 2,49%</strong> je nach Asset). In hoher Volatilität besonders vorsichtig sein.</p>
 </article>
 <article class="card">
 <h3>Einzahlungen / Auszahlungen</h3>
-<p>Zahlungsmethoden und mögliche Gebühren variieren je nach Land.</p>
+<p>Zahlungsmethoden und mögliche Gebühren variieren je nach Land (z.&nbsp;B. SEPA, Karte, E‑Wallet). Genannter Fiat-Mindestbetrag: <strong>10&nbsp;€</strong> (oder Gegenwert). Prüfen Sie auch FX-Umrechnungen.</p>
 </article>
 </div>
+<div class="table-responsive" aria-label="Bitpanda Kostenübersicht (indikativ)">
+<table>
+<thead>
+<tr><th>Produkt</th><th>Gebühren / Premiums (indikativ)</th><th>Hinweis</th></tr>
+</thead>
+<tbody>
+<tr>
+<td>Krypto (Broker)</td>
+<td>Kosten im Endpreis enthalten. Genannte Spanne: 0,00% bis 2,49%. Beispiel: Bitcoin 0,99% Kauf &amp; Verkauf.</td>
+<td>Die Übersicht zeigt die exakten Kosten vor Bestätigung.</td>
+</tr>
+<tr>
+<td>Aktien &amp; ETFs (Real Securities)</td>
+<td>Bitpanda gibt an, keine Kommissionen/Overnight Fees zu berechnen, aber ein <strong>Spread</strong> (Bid/Ask) fällt an.</td>
+<td>Genannte Marktzeiten: Mo–Fr 07:30–23:00 (nicht 24/7).</td>
+</tr>
+<tr>
+<td>Edelmetalle</td>
+<td>Gold 0,5% Kauf / 1% Verkauf · Silber 2,5% / 2% · Platin 2,5% / 2% · Palladium 2,2% / 1,8%.</td>
+<td>Bitpanda gibt an, keine Verwahr-/Lagergebühren zu berechnen.</td>
+</tr>
+<tr>
+<td>Fiat</td>
+<td>Genannter Mindestbetrag für Ein-/Auszahlungen: 10&nbsp;€ (oder Gegenwert).</td>
+<td>Gebühren können je nach Methode variieren (SEPA, Karte, E‑Wallet…).</td>
+</tr>
+</tbody>
+</table>
+</div>
 <p class="small note">Unabhängige Website: Bedingungen, Gebühren und Services können sich ändern. Prüfen Sie offizielle Bitpanda-Informationen vor Entscheidungen.</p>
+</div>
+</section>
+<!-- Sicherheit & Compliance -->
+<section class="features" id="sicherheit">
+<div class="container">
+<h2>Sicherheit &amp; Compliance: konkrete Punkte</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Was Bitpanda angibt</h3>
+<ul class="ref-list">
+<li>Offline-Lagerung (Cold Storage) für die große Mehrheit der Krypto-Assets.</li>
+<li>Session-/Geräteverwaltung und zusätzliche Bestätigungen bei sensiblen Aktionen.</li>
+<li>Custodial Service: Private Keys sind in der Regel nicht über die App zugänglich.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Was Sie tun sollten</h3>
+<ul class="ref-list">
+<li>2FA aktivieren + einzigartiges Passwort + sicheres E‑Mail-Konto.</li>
+<li>Verbundene Geräte/Sessions regelmäßig prüfen.</li>
+<li>Achtung vor Phishing und falschem “Support”.</li>
+</ul>
+</article>
+<article class="card">
+<h3>KYC / Nachweise</h3>
+<ul class="ref-list">
+<li>Identitätsprüfung (KYC) ist verpflichtend.</li>
+<li>In manchen Fällen kann Bitpanda Proof of Funds / Proof of Wealth anfordern.</li>
+<li>Antworten auf Compliance-Anfragen hilft, Blockaden zu vermeiden.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Versicherung (Eligibility-basiert)</h3>
+<ul class="ref-list">
+<li>Bitpanda beschreibt ein Versicherungsprogramm für eligible digitale Assets in Custody (Bedingungen/pro‑rata).</li>
+<li>Prüfen Sie Ausschlüsse, Limits und Umfang, bevor Sie sich darauf verlassen.</li>
+</ul>
+</article>
+</div>
+<p class="small note">Die genauen Maßnahmen hängen von Produkten und Land ab. Prüfen Sie Bitpanda-Hilfeseiten für aktuelle Details.</p>
+</div>
+</section>
+<!-- Bitpanda Card -->
+<section class="fees" id="bitpanda-card">
+<div class="container">
+<h2>Bitpanda Card: was Sie wissen sollten</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Eligibility (Kurzfassung)</h3>
+<ul class="ref-list">
+<li>In <strong>Eurozonen</strong>-Ländern verfügbar – mit Ausnahmen (Zypern, Liechtenstein) laut Bitpanda.</li>
+<li><strong>Verifiziertes</strong> Konto + installierte <strong>Mobile App</strong> (Kartenfunktionen werden in der App verwaltet).</li>
+<li>Eligibility hängt von Land und Verifikationsmethode ab (Bitpanda nennt z.&nbsp;B. Bankident als ggf. nicht berechtigt).</li>
+</ul>
+</article>
+<article class="card">
+<h3>Gebühren &amp; Limits (indikativ)</h3>
+<ul class="ref-list">
+<li>Jede Zahlung löst eine Asset‑zu‑Fiat‑Konvertierung (Trade) mit den <strong>üblichen Trading‑Gebühren</strong> aus.</li>
+<li>ATM-Abhebungen: <strong>2%</strong> der Abhebung oder mindestens <strong>2&nbsp;€</strong> (laut Bitpanda).</li>
+<li>Erste Kartenbestellung laut Bitpanda <strong>kostenlos</strong>; Lieferung bis zu <strong>20 Werktage</strong> (DHL).</li>
+<li>Limits &amp; Einstellungen: in der App prüfen (kann sich ändern).</li>
+</ul>
+</article>
+</div>
+<div class="center">
+<a class="btn cta" data-aff="bitpanda" href="#konto-eroeffnen" rel="sponsored noopener noreferrer" target="_blank">Bitpanda entdecken</a>
+</div>
+<p class="small note">Prüfen Sie Gebühren und Limits in Bitpanda (sie können sich ändern).</p>
 </div>
 </section>
 <!-- Risiken -->
@@ -215,6 +438,40 @@
 <summary>Ist das Angebot in jedem Land gleich?</summary>
 <p>Nein. Produkte und Verfügbarkeit können je nach Regulierung und Wohnsitz variieren.</p>
 </details>
+<details>
+<summary>Welche Gebühren sollte ich bei Krypto erwarten?</summary>
+<p>Bitpanda gibt an, dass die Kosten vor Bestätigung angezeigt werden und je nach Asset variieren können (genannte Spanne: 0,00% bis 2,49%). Prüfen Sie die Trade-Übersicht vor dem Bestätigen.</p>
+</details>
+<details>
+<summary>Bietet Bitpanda Aktien und ETFs an?</summary>
+<p>Ja, über Real Stocks &amp; ETFs (Real Securities) je nach Land. Bitpanda gibt an, dass Orders an einer regulierten Börse mit Marktzeiten (Mo–Fr 07:30–23:00, nicht 24/7) ausgeführt werden und dass ein Spread (Bid/Ask) anfallen kann.</p>
+</details>
+<details>
+<summary>Was ist der Mindestbetrag zum Start?</summary>
+<p>Bitpanda nennt 10&nbsp;€ (oder Gegenwert) als Mindestbetrag für Fiat Ein-/Auszahlungen und 1&nbsp;€ (oder Gegenwert) für Krypto Kauf/Verkauf/Swap.</p>
+</details>
+<details>
+<summary>Wer kann die Bitpanda Card bestellen?</summary>
+<p>Bitpanda gibt an, dass die Karte in Eurozonen-Ländern verfügbar ist (mit Ausnahmen wie Zypern und Liechtenstein) und ein verifiziertes Konto sowie die Mobile App zur Verwaltung erfordert.</p>
+</details>
+<details>
+<summary>Kann Bitpanda Proof-of-Funds anfordern?</summary>
+<p>Ja. In manchen Fällen kann Bitpanda Proof of Funds / Proof of Wealth als Teil von Compliance-Pflichten anfordern.</p>
+</details>
+</div>
+</section>
+<!-- Offizielle Quellen -->
+<section class="sources" id="offizielle-quellen">
+<div class="container">
+<h2>Offizielle Quellen (zum Prüfen)</h2>
+<ul class="ref-list">
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360000902525-What-fees-and-premiums-can-I-expect-to-pay-on-Bitpanda" rel="noopener noreferrer" target="_blank">Fees &amp; premiums (Bitpanda Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/24575224671516-Real-Stocks-ETFs-on-Bitpanda" rel="noopener noreferrer" target="_blank">Real Stocks &amp; ETFs (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360000645145-How-can-I-secure-my-Bitpanda-account" rel="noopener noreferrer" target="_blank">Kontosicherheit (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360019578140-Who-can-use-Bitpanda" rel="noopener noreferrer" target="_blank">Eligibility / Länder (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360018933120-What-is-the-Bitpanda-Card-and-what-are-its-benefits" rel="noopener noreferrer" target="_blank">Bitpanda Card (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/115005280545-What-is-the-minimum-deposit-and-withdrawal-amount-for-cryptocurrencies-and-fiat-currencies" rel="noopener noreferrer" target="_blank">Mindestbeträge Ein-/Auszahlung (Helpdesk)</a></li>
+</ul>
 </div>
 </section>
 <!-- Konto eröffnen -->
