--- a/en/bitpanda/index.html
+++ b/en/bitpanda/index.html
@@ -67,6 +67,31 @@
         },
         {
           "@type":"Question",
+          "name":"What fees should I expect on crypto?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda states the cost is shown before confirmation and can vary by asset (stated range: 0.00% to 2.49%). Check the trade summary before confirming."}
+        },
+        {
+          "@type":"Question",
+          "name":"Does Bitpanda offer stocks and ETFs?",
+          "acceptedAnswer":{"@type":"Answer","text":"Yes, via Real Stocks & ETFs (Real Securities) depending on your country. Bitpanda states orders are executed on a regulated exchange with market hours (Mon–Fri 07:30–23:00, not 24/7) and that a spread (bid/ask) applies."}
+        },
+        {
+          "@type":"Question",
+          "name":"What is the minimum amount to start?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda states a minimum of €10 (or equivalent) for fiat deposits/withdrawals and €1 (or equivalent) for crypto buy/sell/swap."}
+        },
+        {
+          "@type":"Question",
+          "name":"Who can order the Bitpanda Card?",
+          "acceptedAnswer":{"@type":"Answer","text":"Bitpanda states the card is available in eurozone countries (with exceptions such as Cyprus and Liechtenstein) and requires a verified account and the mobile app to manage card features."}
+        },
+        {
+          "@type":"Question",
+          "name":"Can Bitpanda request proof of funds documents?",
+          "acceptedAnswer":{"@type":"Answer","text":"Yes. In some cases, Bitpanda may request proof of funds / proof of wealth documents as part of compliance obligations."}
+        },
+        {
+          "@type":"Question",
           "name":"Is the offer the same in every country?",
           "acceptedAnswer":{"@type":"Answer","text":"No. Products and availability can differ depending on regulation and residency."}
         }
@@ -131,60 +156,258 @@
 <p class="small note">Crypto assets can move up or down sharply. Only invest what you can afford to lose.</p>
 </div>
 <div class="hero-media">
-<img alt="Crypto icons (BTC/ETH)" decoding="async" fetchpriority="high" height="400" src="/images/btc.svg" width="800"/>
+<img alt="Portfolio illustration: crypto, stocks/ETFs and metals" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
 </div>
+</div>
+</section>
+<!-- Table of contents -->
+<section class="how-it-works" id="toc">
+<div class="container">
+<h2>On this page</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Understand Bitpanda</h3>
+<ul class="ref-list">
+<li><a href="#quick-facts">Quick facts</a></li>
+<li><a href="#features">Products &amp; services</a></li>
+<li><a href="#fees">Fees &amp; minimums</a></li>
+<li><a href="#security">Security &amp; compliance</a></li>
+</ul>
+</article>
+<article class="card">
+<h3>Practical steps</h3>
+<ul class="ref-list">
+<li><a href="#getting-started">Getting started</a></li>
+<li><a href="#bitpanda-card">Bitpanda Card</a></li>
+<li><a href="#faq">FAQ</a></li>
+<li><a href="#open-account">Open an account</a></li>
+</ul>
+</article>
+</div>
+<p class="small note">The information below comes from public Bitpanda sources and may change. Always check details shown in the Bitpanda app/website before acting.</p>
+</div>
+</section>
+<!-- Quick facts -->
+<section class="features" id="quick-facts">
+<div class="container">
+<h2>Bitpanda at a glance</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Profile (public info)</h3>
+<ul class="ref-list">
+<li>Company founded in <strong>2014</strong> in <strong>Vienna (Austria)</strong>.</li>
+<li>Bitpanda says it has <strong>7+ million users</strong> and <strong>700+ employees</strong>.</li>
+<li>Available in <strong>40+ countries across Europe</strong> (per Bitpanda).</li>
+</ul>
+</article>
+<article class="card">
+<h3>Check before signing up</h3>
+<ul class="ref-list">
+<li>Eligibility: country of residence, age, accepted ID documents.</li>
+<li>Identity verification (KYC) + compliance checks.</li>
+<li>Fees: review the trade summary (exact cost) before confirming.</li>
+</ul>
+</article>
+</div>
+<div class="table-responsive" aria-label="Bitpanda quick facts">
+<table>
+<thead>
+<tr><th>Reference</th><th>Detail (indicative)</th></tr>
+</thead>
+<tbody>
+<tr><th scope="row">Supported fiat currencies</th><td>EUR, USD, GBP, CHF, TRY, PLN, HUF, CZK, DKK, SEK (depending on country).</td></tr>
+<tr><th scope="row">Fiat minimums</th><td>Deposits / withdrawals: from <strong>€10</strong> (or equivalent).</td></tr>
+<tr><th scope="row">Crypto minimums</th><td>Buy / sell / swap: from <strong>€1</strong> (or equivalent).</td></tr>
+<tr><th scope="row">Stocks/ETFs</th><td>Real Stocks &amp; ETFs: Bitpanda states it does not charge commissions/overnight fees, but a <strong>spread</strong> (bid/ask) applies (depending on trade size and market conditions).</td></tr>
+</tbody>
+</table>
+</div>
+<p class="small note">These points are for information only and can change. Verify inside Bitpanda before any transaction.</p>
 </div>
 </section>
 <!-- Features -->
 <section class="features" id="features">
 <div class="container">
-<h2>Key features</h2>
+<h2>Products &amp; services (availability depends on country)</h2>
 <div class="grid-3">
 <article class="card">
-<h3>Buy &amp; sell crypto assets</h3>
-<p>Access a selection of crypto assets via a beginner-friendly interface (availability varies by country).</p>
+<h3>Crypto (buy/sell/swap)</h3>
+<p>Bitpanda states the exact cost is shown before confirmation. Fees can vary by asset (stated range: <strong>0.00% to 2.49%</strong>). Example: Bitcoin premium <strong>0.99%</strong> on buy and sell.</p>
 </article>
 <article class="card">
-<h3>User experience</h3>
-<p>A “one-stop” approach to track your portfolio and manage actions in a single place.</p>
+<h3>Stocks &amp; ETFs (Real Securities)</h3>
+<p>Real ownership, orders executed on a regulated exchange during market hours. Bitpanda states it does not charge commissions, but a <strong>spread</strong> (bid/ask) applies.</p>
 </article>
 <article class="card">
-<h3>Security &amp; good practices</h3>
-<p>Enable account protections (e.g., 2FA) and apply risk management aligned with your profile.</p>
+<h3>Precious metals</h3>
+<p>Gold, silver, platinum and palladium (physical metals, per Bitpanda). Premiums apply (e.g., gold: <strong>0.5%</strong> buy / <strong>1%</strong> sell) and Bitpanda states there are no storage/holding fees.</p>
+</article>
+<article class="card">
+<h3>Bitpanda Card</h3>
+<p>Visa card (depending on eligibility) to spend your assets. Bitpanda states ATM withdrawals cost <strong>2%</strong> of the withdrawal (minimum <strong>€2</strong>) and each payment triggers an in‑app conversion (trade) with the usual trading fees.</p>
+</article>
+<article class="card">
+<h3>Savings plans</h3>
+<p>For recurring purchases, Bitpanda offers savings plans (stated minimum: <strong>€10</strong> or equivalent).</p>
+</article>
+<article class="card">
+<h3>Security (best practices)</h3>
+<p>Enable <strong>2FA</strong>, monitor active sessions and stay alert to phishing. Bitpanda says it stores the <strong>vast majority</strong> of crypto assets offline (cold storage).</p>
 </article>
 </div>
-<ul aria-label="Examples of crypto assets" class="tickers">
+<ul aria-label="Asset examples" class="tickers">
 <li><img alt="" aria-hidden="true" decoding="async" height="20" src="/images/btc.svg" width="20"/> BTC</li>
 <li><img alt="" aria-hidden="true" decoding="async" height="20" src="/images/eth.svg" width="20"/> ETH</li>
+<li>Gold</li>
+<li>ETF</li>
 </ul>
 </div>
 </section>
 <!-- Getting started -->
-<section class="how-it-works">
+<section class="how-it-works" id="getting-started">
 <div class="container">
 <h2>How to get started</h2>
 <ol class="steps">
-<li>Create an account and complete the requested signup steps.</li>
-<li>Secure your account (strong password, 2FA).</li>
-<li>Review fees, then place a first buy if it matches your plan.</li>
+<li>Check eligibility (country of residence, accepted documents) and create an account.</li>
+<li>Complete identity verification (KYC) and, if requested, provide supporting documents (proof of funds/wealth).</li>
+<li>Secure your account: unique password + 2FA + review devices/sessions.</li>
+<li>Deposit funds (stated minimum: €10 or equivalent), then review the fee summary.</li>
+<li>Start with an amount that fits your profile (stated crypto minimum: €1 or equivalent).</li>
+<li>Monitor exposure and avoid over-trading when spreads/costs are unfavorable.</li>
 </ol>
+<div class="grid-2">
+<article class="card">
+<h3>Security checklist</h3>
+<ul class="ref-list">
+<li>Enable 2FA right away (authenticator app).</li>
+<li>Review active sessions and sign out unknown devices.</li>
+<li>Avoid links from messages: type the URL yourself.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Fees checklist</h3>
+<ul class="ref-list">
+<li>Always review the <strong>trade summary</strong> before confirming (exact cost).</li>
+<li>Compare: spreads/premiums + deposit/withdrawal fees depending on payment method.</li>
+<li>For securities (stocks/ETFs), remember <strong>market hours</strong> and that a <strong>spread</strong> (bid/ask) can apply.</li>
+</ul>
+</article>
+</div>
 </div>
 </section>
 <!-- Fees -->
-<section class="fees">
+<section class="fees" id="fees">
 <div class="container">
 <h2>Fees: what to check</h2>
 <div class="grid-2">
 <article class="card">
 <h3>Trading / transaction fees</h3>
-<p>Depending on the product and execution method, fees may apply. Always review the estimate before confirming.</p>
+<p>Bitpanda states the cost is included in the final price and shown in the trade summary (stated range: <strong>0.00% to 2.49%</strong> depending on the asset). Be extra cautious during high volatility.</p>
 </article>
 <article class="card">
 <h3>Deposits / withdrawals</h3>
-<p>Available payment methods and potential fees vary by country.</p>
+<p>Payment methods and possible fees vary by country (e.g., SEPA, cards, e-wallets). Stated fiat minimum: <strong>€10</strong> (or equivalent). Also check FX conversions if your currency differs.</p>
 </article>
 </div>
+<div class="table-responsive" aria-label="Bitpanda cost summary (indicative)">
+<table>
+<thead>
+<tr><th>Product</th><th>Fees / premiums (indicative)</th><th>Notes</th></tr>
+</thead>
+<tbody>
+<tr>
+<td>Crypto (broker)</td>
+<td>Cost included in the final price. Stated range: 0.00% to 2.49%. Example: Bitcoin 0.99% buy &amp; sell.</td>
+<td>The trade summary shows the exact cost before confirmation.</td>
+</tr>
+<tr>
+<td>Stocks &amp; ETFs (Real Securities)</td>
+<td>Bitpanda states it does not charge commissions/overnight fees, but a <strong>spread</strong> (bid/ask) applies.</td>
+<td>Stated market hours: Mon–Fri 07:30–23:00 (not 24/7).</td>
+</tr>
+<tr>
+<td>Precious metals</td>
+<td>Gold 0.5% buy / 1% sell · Silver 2.5% / 2% · Platinum 2.5% / 2% · Palladium 2.2% / 1.8%.</td>
+<td>Bitpanda states there are no storage/holding fees.</td>
+</tr>
+<tr>
+<td>Fiat</td>
+<td>Stated deposit/withdrawal minimum: €10 (or equivalent).</td>
+<td>Fees may depend on the method (SEPA, cards, e-wallets…).</td>
+</tr>
+</tbody>
+</table>
+</div>
 <p class="small note">This is an independent site: terms, fees and services may change. Check official Bitpanda information before making decisions.</p>
+</div>
+</section>
+<!-- Security & compliance -->
+<section class="features" id="security">
+<div class="container">
+<h2>Security &amp; compliance: concrete points</h2>
+<div class="grid-2">
+<article class="card">
+<h3>What Bitpanda states</h3>
+<ul class="ref-list">
+<li>Offline storage (cold storage) for the vast majority of crypto assets.</li>
+<li>Session/device management and extra confirmations for sensitive actions.</li>
+<li>Custodial service: you typically don’t access private keys through the app.</li>
+</ul>
+</article>
+<article class="card">
+<h3>What you should do</h3>
+<ul class="ref-list">
+<li>Enable 2FA + unique password + secure email.</li>
+<li>Review connected devices/sessions regularly.</li>
+<li>Stay alert to phishing and fake “support”.</li>
+</ul>
+</article>
+<article class="card">
+<h3>KYC / documents</h3>
+<ul class="ref-list">
+<li>Identity verification (KYC) is required.</li>
+<li>In some cases, Bitpanda may request proof of funds / proof of wealth documents.</li>
+<li>Responding to compliance requests helps avoid deposit/withdrawal blocks.</li>
+</ul>
+</article>
+<article class="card">
+<h3>Insurance (eligibility-based)</h3>
+<ul class="ref-list">
+<li>Bitpanda describes an insurance program for eligible digital assets held in custody (conditions/pro‑rata).</li>
+<li>Check exclusions, caps and scope before relying on it.</li>
+</ul>
+</article>
+</div>
+<p class="small note">Exact measures depend on products and your country. Check Bitpanda help pages for up-to-date details.</p>
+</div>
+</section>
+<!-- Bitpanda Card -->
+<section class="fees" id="bitpanda-card">
+<div class="container">
+<h2>Bitpanda Card: what to know</h2>
+<div class="grid-2">
+<article class="card">
+<h3>Eligibility (summary)</h3>
+<ul class="ref-list">
+<li>Available in <strong>eurozone</strong> countries, with exceptions (Cyprus, Liechtenstein) per Bitpanda.</li>
+<li><strong>Verified</strong> Bitpanda account + <strong>mobile app</strong> installed (card features are managed via the app).</li>
+<li>Eligibility depends on country and verification method (Bitpanda states some methods, e.g. Bankident, may be ineligible).</li>
+</ul>
+</article>
+<article class="card">
+<h3>Fees &amp; limits (indicative)</h3>
+<ul class="ref-list">
+<li>Each payment triggers an asset‑to‑fiat conversion (trade) with the <strong>usual trading fee</strong>.</li>
+<li>ATM withdrawals: <strong>2%</strong> of the withdrawal or minimum <strong>€2</strong> (per Bitpanda).</li>
+<li>The first card order is stated as <strong>free</strong>; delivery up to <strong>20 business days</strong> (DHL) per Bitpanda.</li>
+<li>Limits &amp; settings: check the app (they can change).</li>
+</ul>
+</article>
+</div>
+<div class="center">
+<a class="btn cta" data-aff="bitpanda" href="#open-account" rel="sponsored noopener noreferrer" target="_blank">Discover Bitpanda</a>
+</div>
+<p class="small note">Always verify fees and limits inside Bitpanda (they can change).</p>
 </div>
 </section>
 <!-- Risks -->
@@ -215,6 +438,40 @@
 <summary>Is the offer the same in every country?</summary>
 <p>No. Products and availability can differ depending on regulation and residency.</p>
 </details>
+<details>
+<summary>What fees should I expect on crypto?</summary>
+<p>Bitpanda states the cost is shown before confirmation and can vary by asset (stated range: 0.00% to 2.49%). Check the trade summary before confirming.</p>
+</details>
+<details>
+<summary>Does Bitpanda offer stocks and ETFs?</summary>
+<p>Yes, via Real Stocks &amp; ETFs (Real Securities) depending on your country. Bitpanda states orders are executed on a regulated exchange with market hours (Mon–Fri 07:30–23:00, not 24/7) and that a spread (bid/ask) can apply.</p>
+</details>
+<details>
+<summary>What is the minimum amount to start?</summary>
+<p>Bitpanda states a minimum of €10 (or equivalent) for fiat deposits/withdrawals and €1 (or equivalent) for crypto buy/sell/swap.</p>
+</details>
+<details>
+<summary>Who can order the Bitpanda Card?</summary>
+<p>Bitpanda states the card is available in eurozone countries (with exceptions such as Cyprus and Liechtenstein) and requires a verified account and the mobile app to manage card features.</p>
+</details>
+<details>
+<summary>Can Bitpanda request proof of funds documents?</summary>
+<p>Yes. In some cases, Bitpanda may request proof of funds / proof of wealth documents as part of compliance obligations.</p>
+</details>
+</div>
+</section>
+<!-- Official sources -->
+<section class="sources" id="official-sources">
+<div class="container">
+<h2>Official sources (to verify)</h2>
+<ul class="ref-list">
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360000902525-What-fees-and-premiums-can-I-expect-to-pay-on-Bitpanda" rel="noopener noreferrer" target="_blank">Fees &amp; premiums (Bitpanda Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/24575224671516-Real-Stocks-ETFs-on-Bitpanda" rel="noopener noreferrer" target="_blank">Real Stocks &amp; ETFs (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360000645145-How-can-I-secure-my-Bitpanda-account" rel="noopener noreferrer" target="_blank">Account security (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360019578140-Who-can-use-Bitpanda" rel="noopener noreferrer" target="_blank">Eligibility / countries (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/360018933120-What-is-the-Bitpanda-Card-and-what-are-its-benefits" rel="noopener noreferrer" target="_blank">Bitpanda Card (Helpdesk)</a></li>
+<li><a href="https://support.bitpanda.com/hc/en-us/articles/115005280545-What-is-the-minimum-deposit-and-withdrawal-amount-for-cryptocurrencies-and-fiat-currencies" rel="noopener noreferrer" target="_blank">Minimum deposit/withdrawal amounts (Helpdesk)</a></li>
+</ul>
 </div>
 </section>
 <!-- Open account -->
